# SPDX-FileCopyrightText: 2024 Tobias Fella <tobias.fella@kde.org>
# SPDX-License-Identifier: LGPL-2.0-or-later

[package]
name = "matrix-rust-sdk-crypto-cpp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
matrix-sdk-common = "0.7"
matrix-sdk-crypto = "0.7"
# TODO: (probably) disabled bundled
ruma-common = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
matrix-sdk-sqlite = { version = "0.7", default-features = false, features = ["bundled", "crypto-store"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
matrix-sdk-sqlite = { version = "0.7", default-features = false, features = ["crypto-store"] }

[build-dependencies]
cxx-build = "1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
